--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon .bin/www"
+    "dev": "nodemon .bin/www",
+    "db:reset": "psql blog -f ./sql/schema.sql -U eli && psql blog -f ./sql/seed.sql -U eli"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
